feat: Añadir video tutorial de YouTube a la landing page
- Video embebido de YouTube (pHm49uVLYVc) en sección destacada
- Diseño responsive con aspect ratio 16:9
- Enlace para ver en YouTube
- Ubicado después del preview de app móvil
- Optimizado para conversión y engagement

--- a/index.html
+++ b/index.html
@@ -1306,6 +1306,44 @@
       </div>
     </section>
 
+    <!-- Video Tutorial -->
+    <section id="video-tutorial" class="section container" style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); border-radius: 24px; padding: 48px 24px; margin: 48px auto;">
+      <div style="text-align: center; margin-bottom: 40px;">
+        <span style="background: rgba(37,99,235,0.1); color: #1d4ed8; font-weight: 700; font-size: 14px; padding: 6px 14px; border-radius: 999px; display: inline-block; margin-bottom: 16px;">🎥 Video Tutorial</span>
+        <h2 style="margin: 0 0 16px; font-size: clamp(32px, 5vw, 48px); font-weight: 800; color: #0f172a;">Aprende a usar Delfín Check-in</h2>
+        <p class="lead" style="font-size: 18px; color: #475569; max-width: 700px; margin: 0 auto;">
+          Descubre todas las funcionalidades del panel de usuario en este video tutorial completo.
+        </p>
+      </div>
+
+      <div style="max-width: 900px; margin: 0 auto;">
+        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: 0 20px 60px rgba(0,0,0,0.3); background: #000;">
+          <iframe
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
+            src="https://www.youtube.com/embed/pHm49uVLYVc"
+            title="Video Tutorial - Panel de Usuario Delfín Check-in"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowFullScreen
+          ></iframe>
+        </div>
+        <div style="text-center; margin-top: 24px;">
+          <a
+            href="https://www.youtube.com/watch?v=pHm49uVLYVc"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="color: #2563eb; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; font-size: 16px;"
+            onmouseover="this.style.color='#1d4ed8'"
+            onmouseout="this.style.color='#2563eb'"
+          >
+            Ver en YouTube
+            <svg style="width: 20px; height: 20px;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
 
 
     <!-- Datos centralizados y descarga para renta anual -->
