feat: Integración de analytics tracking y popup en landing page
- Añadido script landing-tracking.js para tracking completo
- Popup modal 'PMS Gratis para Siempre' con CTA
- Tracking automático de eventos: scroll, clics, formularios, popup
- Integración con API de analytics en admin.delfincheckin.com

--- a/index.html
+++ b/index.html
@@ -3748,6 +3748,9 @@ ${message}`;
       }
     })();
   </script>
+
+  <!-- Landing Page Analytics Tracking -->
+  <script src="https://admin.delfincheckin.com/landing-tracking.js"></script>
 </body>
 </html>
 
