fix: Corregir formulario waitlist para que funcione correctamente
- Eliminar handler inline del formulario
- Añadir event listener después de definir la función
- Asegurar que submitWaitlist esté disponible cuando se usa
- Prevenir recarga de página correctamente

--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@
           </p>
         </div>
         
-        <form id="waitlistForm" onsubmit="submitWaitlist(event); return false;" style="display: grid; gap: 20px;">
+        <form id="waitlistForm" style="display: grid; gap: 20px;">
           <label>
             <span style="display: block; margin-bottom: 8px; font-weight: 600; color: #0f172a;">Email *</span>
             <input 
