fix: Corregir template string en comentario que causaba error de sintaxis
- Eliminar template string dentro de comentario (línea 3783)
- Corregir error 'Unexpected end of input' en consola
- El comentario con template string estaba causando problemas de parsing

--- a/index.html
+++ b/index.html
@@ -3780,7 +3780,7 @@ ${message}`;
       openPaymentModal: typeof window.openPaymentModal
     });
     
-    // Cache busting - Última actualización: ${new Date().toISOString()}
+    // Cache busting - Última actualización
     console.log('Delfín Check-in cargado correctamente - Versión:', new Date().toISOString());
     
     // Verificar si hay parámetros en la URL para abrir el modal automáticamente
