fix: Añadir llave de cierre faltante para if (calcProperties)
- Cerrar bloque if (calcProperties) que se abrió en línea 2620
- Corregir error 'Unexpected end of input' en línea 3819
- El bloque if nunca se cerraba, causando error de sintaxis

--- a/index.html
+++ b/index.html
@@ -2646,6 +2646,7 @@
       stopIncrement();
       stopDecrement();
     });
+    } // Cerrar if (calcProperties)
     
     // ===== SOPORTE PARA MÓVILES (TOUCH EVENTS) =====
     
