feat: Actualizar landing page con mejoras en contenido y diseño
- Eliminar '(próximamente)' del módulo de check-in digital
- Cambiar 'Gestión de habitaciones' a 'Gestión de habitaciones o propiedades' en waitlist
- Aplicar estilo del primer testimonio al tercero (fondo azul claro)
- Actualizar todas las preguntas frecuentes con información más detallada:
  - Añadir información sobre no pedir tarjeta de crédito
  - Explicar proceso de check-in con enlaces y plantillas
  - Actualizar registro de viajeros con plan CHECKIN y explicación PV/RH
  - Detallar soporte de idiomas y personalización
  - Actualizar disponibilidad del módulo check-in
  - Especificar tiempos de respuesta de soporte técnico

--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
             <div style="background: #f59e0b; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">3</div>
             <h3 style="margin: 0; color: #d97706; font-size: 18px;">Pre‑check‑in online</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Módulo de check-in digital (próximamente): Permite a tus huéspedes completar su información y envía automáticamente al Ministerio del Interior de España. <strong>Coste: 8€/mes (siempre de pago)</strong>.</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Módulo de check-in digital: Permite a tus huéspedes completar su información y envía automáticamente al Ministerio del Interior de España. <strong>Coste: 8€/mes (siempre de pago)</strong>.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1537,7 +1537,7 @@
               <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 18px;">✨ Plan Gratuito - Incluye todo esto</h4>
               <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 2;">
                 <li><strong>✅ Gestión completa de reservas</strong> - Sin límites</li>
-                <li><strong>✅ Gestión de habitaciones</strong> - Control total</li>
+                <li><strong>✅ Gestión de habitaciones o propiedades</strong> - Control total</li>
                 <li><strong>✅ Exportación de datos</strong> - CSV/Excel</li>
                 <li><strong>✅ Panel de administración</strong> - Intuitivo y potente</li>
                 <li><strong>✅ Soporte por email</strong> - Siempre disponible</li>
@@ -1632,12 +1632,12 @@
           <div class="testimonial-author">Nuestra promesa</div>
           <div class="testimonial-role">Para todos los propietarios</div>
         </div>
-        <div class="testimonial">
-          <div class="testimonial-text">
+        <div class="testimonial" style="background: linear-gradient(135deg, rgba(68,192,255,0.1) 0%, rgba(124,240,124,0.1) 100%); border: 2px solid rgba(68,192,255,0.3);">
+          <div class="testimonial-text" style="font-size: 18px; font-weight: 600; color: var(--text);">
             "Las apps móviles están en desarrollo. 
-            Pero el core del PMS: <strong>gestionar reservas y habitaciones de forma simple y gratis</strong>, eso es lo primero."
+            Pero el core del PMS: <strong style="color: var(--brand);">gestionar reservas y habitaciones de forma simple y gratis</strong>, eso es lo primero."
           </div>
-          <div class="testimonial-author">Nuestro enfoque</div>
+          <div class="testimonial-author" style="margin-top: 16px; font-weight: 700;">Nuestro enfoque</div>
           <div class="testimonial-role">Lo esencial primero, el resto viene después</div>
         </div>
       </div>
@@ -1654,6 +1654,8 @@
           <strong>Incluye:</strong> Gestión de reservas, habitaciones, exportación de datos, panel completo y app móvil (próximamente).
           <br><br>
           <strong>No incluye:</strong> El módulo de check-in digital (envío al Ministerio del Interior) que siempre costará 8€/mes.
+          <br><br>
+          <strong>En ningún momento tendrás que poner tu tarjeta de crédito</strong>, así que no te vamos a engañar. El plan gratuito es realmente gratuito, sin trucos ni letra pequeña.
         </p>
       </details>
       <details>
@@ -1673,9 +1675,12 @@
       <details>
         <summary>¿Cómo se hace el check‑in online?</summary>
         <p>
-          Desde el dashboard generas o programas el envío de un enlace seguro al huésped (por email o WhatsApp). 
+          Copias el enlace en la sección del dashboard de "Registros" o "Formularios" y se lo envías a tus huéspedes. 
+          Puedes ponerlo en plantillas de Airbnb o Booking para que lo reciban de manera automática siempre que se dé una reserva, 
+          así no tendrás ni que enviarlo tú. Solo tendrás que confirmar que lo has recibido y ya le envías las instrucciones 
+          y normas para el check-in a tu huésped.
+          <br><br>
           El viajero completa sus datos, adjunta documentación y firma si procede, todo en su idioma. 
-          El módulo de check-in estará disponible próximamente con un coste de 8€ al mes. 
           Al llegar, el proceso en recepción se reduce a validar identidad y entregar llaves.
         </p>
       </details>
@@ -1689,15 +1694,19 @@
       <details>
         <summary>¿Cómo funciona el registro de viajeros?</summary>
         <p>
-          El módulo de registro de viajeros estará disponible próximamente. Por ahora, el PMS incluye gestión completa de reservas y habitaciones de forma gratuita.
+          El registro de viajeros está disponible en el <strong>Plan Check-in de 8€ al mes</strong>. 
+          Ahí puedes confirmar que el huésped ha rellenado los datos y se ha enviado al Ministerio del Interior del Gobierno de España 
+          tanto el <strong>Parte de Viajeros (PV)</strong> como la <strong>Reserva de Hospedaje (RH)</strong>, 
+          los cuales son obligatorios para todos los alojamientos de corta estancia en España según la normativa vigente (RD 933/2021).
         </p>
       </details>
       <details>
         <summary>¿Qué idiomas soporta el sistema?</summary>
         <p>
-          El módulo de check-in estará disponible próximamente con un coste de 8€ al mes. 
-          Los formularios se adaptan automáticamente según la ubicación del huésped o pueden seleccionarse manualmente. 
-          El panel de administración está en español con soporte para múltiples idiomas en desarrollo.
+          De momento, lo único que está en varios idiomas es el formulario que rellenan los viajeros al hacer el check-in. 
+          El resto del panel de usuario para gestionar tus habitaciones o propiedades solo está en español. 
+          Pero si lo necesitas en otro idioma, solo tendrás que escribirnos a <strong>contacto@delfincheckin.com</strong> 
+          y nos pondremos a trabajar en ello para facilitártelo todo.
         </p>
       </details>
       <details>
@@ -1731,9 +1740,9 @@
       <details>
         <summary>¿Puedo personalizar el formulario de check-in?</summary>
         <p>
-          Sí, puedes añadir campos personalizados, modificar el diseño, incluir tu logo y colores corporativos, 
-          y configurar validaciones específicas. También puedes crear diferentes formularios para distintos tipos 
-          de alojamiento o temporadas del año.
+          No, el formulario no es personalizable, pero está completo con todo lo que se pide. 
+          En caso de que necesitaras algo más o hubiera algo que no se entendiese, nos podrías escribir a 
+          <strong>contacto@delfincheckin.com</strong> y estaremos encantados de atender tus necesidades.
         </p>
       </details>
       <details>
@@ -1762,8 +1771,8 @@
       <details>
         <summary>¿Cuándo estará disponible el módulo de check-in?</summary>
         <p>
-          Estamos en fase de pre-lanzamiento. El módulo de check-in digital (envío al Ministerio del Interior) estará disponible próximamente. 
-          <strong>Este módulo siempre tendrá un coste de 8€ al mes</strong>, sin excepciones. Te avisaremos por email cuando esté disponible.
+          En cuanto se lance la versión gratuita del PMS se podrá contratar este módulo también. 
+          Te avisaremos por email cuando esté disponible para que puedas empezar a usarlo de inmediato.
         </p>
       </details>
       <details>
@@ -1778,9 +1787,9 @@
       <details>
         <summary>¿Qué soporte técnico incluye?</summary>
         <p>
-          Incluimos soporte por email, chat en vivo y videollamadas cuando sea necesario. Nuestro equipo responde 
-          en menos de 2 horas durante horario comercial y tenemos documentación completa, tutoriales en video 
-          y webinars semanales para ayudarte a sacar el máximo partido del sistema.
+          Incluimos soporte por email. Las consultas se responden en un máximo de 24-48 horas. 
+          Por lo general, ninguna de momento ha pasado ese tiempo, pero pudiera ocurrir aunque no es lo normal. 
+          Estamos aquí para ayudarte y resolver cualquier duda o problema que puedas tener.
         </p>
       </details>
     </section>
