feat: Integración script de tracking de referidos
- Añadido script referral-tracking.js en landing page
- Permite tracking de parámetro ?ref=REF_XXXX desde la landing
- Cookies de 30 días para persistencia del referido

--- a/index.html
+++ b/index.html
@@ -3893,6 +3893,12 @@ ${message}`;
 
   <!-- Landing Page Analytics Tracking -->
   <script src="https://admin.delfincheckin.com/landing-tracking.js"></script>
+  
+  <!-- Affiliate Tracking Script -->
+  <script src="https://affiliates.delfincheckin.com/affiliate-tracking.js"></script>
+  
+  <!-- Referral Tracking Script -->
+  <script src="https://admin.delfincheckin.com/referral-tracking.js"></script>
 </body>
 </html>
 
