feat: añadir sección programas (referidos y afiliados) y páginas informativas
- Añadida nueva sección 'Gana dinero con Delfín Check-in' en landing
- Creadas páginas /referidos.html y /afiliados.html
- Actualizado footer con enlaces a programas
- Páginas mantienen estilo y marca Delfín Check-in

--- a/index.html
+++ b/index.html
@@ -853,6 +853,42 @@
       </div>
     </section>
 
+    <!-- Gana dinero o ahorrátelo -->
+    <section id="gana-dinero" class="section container" aria-labelledby="gana-dinero-title">
+      <div style="background: linear-gradient(135deg, rgba(139,92,246,0.12) 0%, rgba(37,99,235,0.12) 100%); border: 2px solid rgba(139,92,246,0.18); border-radius: 24px; padding: clamp(32px, 5vw, 48px); margin: 32px 0; text-align: center;">
+        <div style="margin-bottom: 24px;">
+          <span style="background: rgba(139,92,246,0.15); color: #7c3aed; font-weight: 700; font-size: 14px; padding: 8px 16px; border-radius: 999px; display: inline-block; margin-bottom: 16px;">💎 Programa de Recomendaciones</span>
+          <h2 id="gana-dinero-title" style="margin: 0 0 16px; font-size: clamp(32px, 5vw, 42px); color: #0f172a; font-weight: 800;">Gana dinero con Delfín Check-in o ahorrátelo</h2>
+          <p style="margin: 0 auto 32px; font-size: 18px; line-height: 1.7; color: #475569; max-width: 720px;">
+            Si eres propietario y usas Delfín Check-in (Plan Pro o Check-in), recomiéndanos y consigue <strong style="color:#0f172a;">meses gratis</strong>. 
+            Si no eres propietario pero conoces a alguien que podría usar nuestro PMS, gana <strong style="color:#0f172a;">comisiones recurrentes</strong> recomendándonos.
+          </p>
+        </div>
+        
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 24px; max-width: 900px; margin: 0 auto;">
+          <div style="background: #ffffff; border-radius: 20px; padding: 32px; border: 2px solid rgba(37,99,235,0.15); box-shadow: 0 12px 40px rgba(37,99,235,0.12); transition: transform 0.3s ease;">
+            <div style="font-size: 48px; margin-bottom: 16px;">🏡</div>
+            <h3 style="margin: 0 0 12px; font-size: 24px; color: #1d4ed8; font-weight: 700;">Soy Propietario</h3>
+            <p style="margin: 0 0 24px; color: #475569; line-height: 1.6; font-size: 16px;">
+              Recomienda Delfín Check-in a otros propietarios y consigue <strong style="color:#0f172a;">meses gratis</strong> en nuestros planes. 
+              Cuantos más refieras, más meses gratis acumulas.
+            </p>
+            <a href="/referidos.html" class="btn primary" style="text-decoration: none; display: inline-block; width: 100%; text-align: center; padding: 14px 24px; font-size: 16px; font-weight: 600;">Ver Programa de Referidos</a>
+          </div>
+          
+          <div style="background: #ffffff; border-radius: 20px; padding: 32px; border: 2px solid rgba(139,92,246,0.15); box-shadow: 0 12px 40px rgba(139,92,246,0.12); transition: transform 0.3s ease;">
+            <div style="font-size: 48px; margin-bottom: 16px;">💰</div>
+            <h3 style="margin: 0 0 12px; font-size: 24px; color: #7c3aed; font-weight: 700;">No soy Propietario</h3>
+            <p style="margin: 0 0 24px; color: #475569; line-height: 1.6; font-size: 16px;">
+              Gana <strong style="color:#0f172a;">30% de comisión recurrente</strong> por cada cliente que refieras y que se mantenga activo. 
+              Pagos automáticos mensuales a tu cuenta bancaria.
+            </p>
+            <a href="/afiliados.html" class="btn" style="text-decoration: none; display: inline-block; width: 100%; text-align: center; padding: 14px 24px; font-size: 16px; font-weight: 600; background: linear-gradient(135deg, #7c3aed, #8b5cf6); color: white; border: none;">Ver Programa de Afiliados</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Enlaces de pagos directos -->
     <section id="enlaces-pagos" class="section container" aria-labelledby="links-title">
       <div style="background: #ffffff; border: 1px solid rgba(15,23,42,0.08); border-radius: 24px; padding: clamp(24px, 4vw, 40px); box-shadow: 0 15px 40px rgba(15,23,42,0.08); display: grid; gap: 24px;">
@@ -1907,6 +1943,13 @@
             <p style="margin: 0; color: var(--muted); font-size: 14px;">
               📧 contacto@delfincheckin.com<br>
               🕒 Lun-Dom: 9:00-22:00
+            </p>
+          </div>
+          <div>
+            <h4 style="margin: 0 0 10px; color: var(--text);">Programas</h4>
+            <p style="margin: 0; color: var(--muted); font-size: 14px;">
+              <a href="/referidos.html" style="color: var(--brand);">Programa de Referidos</a><br>
+              <a href="/afiliados.html" style="color: var(--brand);">Programa de Afiliados</a><br>
             </p>
           </div>
           <div>
