OptimizaciÃ³n SEO: Schema.org FAQPage, meta tags adicionales y sitemap mejorado

--- a/index.html
+++ b/index.html
@@ -60,6 +60,54 @@
   <meta name="twitter:description" content="PMS gratuito para hoteles: gestión de reservas, habitaciones y más. Módulo de check-in: 8€/mes. Pre-lanzamiento - Regístrate ahora.">
   <meta name="twitter:image" content="https://delfincheckin.com/og-image.svg">
   <meta name="twitter:image:alt" content="Delfín Check-in - Software de gestión hotelera">
+  
+  <!-- LinkedIn / Professional Networks -->
+  <meta property="og:type" content="website">
+  <meta property="og:image:secure_url" content="https://delfincheckin.com/og-image.svg">
+  
+  <!-- Additional SEO Meta Tags for Modern Search -->
+  <meta name="rating" content="general">
+  <meta name="distribution" content="global">
+  <meta name="revisit-after" content="7 days">
+  <meta name="coverage" content="worldwide">
+  <meta name="target" content="all">
+  <meta name="audience" content="all">
+  
+  <!-- Voice Search Optimization -->
+  <meta name="google" content="notranslate">
+  <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  
+  <!-- AI / LLM Optimization -->
+  <meta name="abstract" content="Software de gestión hotelera gratuito para siempre. PMS completo con reservas, habitaciones, check-in digital y panel de administración. Módulo de check-in: 8€/mes.">
+  <meta name="topic" content="Software de gestión hotelera, PMS, sistema de reservas, check-in digital">
+  <meta name="summary" content="Delfín Check-in es un software de gestión hotelera completamente gratuito para siempre. Incluye gestión de reservas, habitaciones, exportación de datos y panel de administración. El módulo de check-in digital con envío al Ministerio del Interior cuesta 8€/mes.">
+  <meta name="classification" content="Software, Gestión Hotelera, PMS, Sistema de Reservas">
+  
+  <!-- Local Business / Geographic -->
+  <meta name="geo.position" content="40.4168;-3.7038">
+  <meta name="ICBM" content="40.4168, -3.7038">
+  <meta name="DC.title" content="Delfín Check-in - Software de gestión hotelera gratuito">
+  
+  <!-- Rich Snippets / Structured Data Hints -->
+  <meta name="news_keywords" content="software hotel, PMS gratis, gestión hotelera, check-in digital, reservas online">
+  <meta name="article:tag" content="software hotel">
+  <meta name="article:tag" content="PMS gratis">
+  <meta name="article:tag" content="gestión hotelera">
+  <meta name="article:tag" content="check-in digital">
+  <meta name="article:tag" content="reservas online">
+  
+  <!-- Mobile / App Optimization -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-itunes-app" content="app-id=, app-argument=">
+  
+  <!-- Content Language and Translation -->
+  <meta http-equiv="content-language" content="es-ES">
+  <meta name="language" content="Spanish">
+  
+  <!-- Verification Tags (if needed in future) -->
+  <!-- <meta name="google-site-verification" content=""> -->
+  <!-- <meta name="msvalidate.01" content=""> -->
+  <!-- <meta name="yandex-verification" content=""> -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -178,6 +226,132 @@
             }
           ]
         }
+      },
+      {
+        "@type": "FAQPage",
+        "@id": "https://delfincheckin.com/#faq",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "¿Es realmente gratis?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí, el Plan Gratuito es completamente gratis para siempre. Se financia mediante anuncios elegantes y discretos en el panel de administración. No hay costes ocultos, no hay límites de tiempo, y no necesitas cancelar nada porque nunca te cobraremos por el plan gratuito. Incluye: Gestión de reservas, habitaciones, exportación de datos, panel completo y app móvil (próximamente). No incluye: El módulo de check-in digital (envío al Ministerio del Interior) que siempre costará 8€/mes. En ningún momento tendrás que poner tu tarjeta de crédito, así que no te vamos a engañar. El plan gratuito es realmente gratuito, sin trucos ni letra pequeña."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cómo funciona el módulo de check-in digital?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "El módulo de check-in digital permite a tus huéspedes completar su información antes de llegar y envía automáticamente los registros al Ministerio del Interior de España según la normativa vigente (RD 933/2021). Este módulo siempre tendrá un coste de 8€ al mes, sin excepciones. Incluye: Formulario de check-in digital para huéspedes, envío automático al Ministerio del Interior, cumplimiento normativo garantizado, sin anuncios en el panel y soporte prioritario."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cómo se hace el check‑in online?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Copias el enlace en la sección del dashboard de \"Registros\" o \"Formularios\" y se lo envías a tus huéspedes. Puedes ponerlo en plantillas de Airbnb o Booking para que lo reciban de manera automática siempre que se dé una reserva, así no tendrás ni que enviarlo tú. Solo tendrás que confirmar que lo has recibido y ya le envías las instrucciones y normas para el check-in a tu huésped. El viajero completa sus datos, adjunta documentación y firma si procede, todo en su idioma. Al llegar, el proceso en recepción se reduce a validar identidad y entregar llaves."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Puedo exportar datos para la asesoría y la renta?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí. Puedes descargar un único archivo (CSV/Excel) con ingresos, tasas y ocupación filtrado por rango de fechas o ejercicio fiscal. El PMS incluye gestión completa de reservas y habitaciones de forma gratuita."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cómo funciona el registro de viajeros?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "El registro de viajeros está disponible en el Plan Check-in de 8€ al mes. Ahí puedes confirmar que el huésped ha rellenado los datos y se ha enviado al Ministerio del Interior del Gobierno de España tanto el Parte de Viajeros (PV) como la Reserva de Hospedaje (RH), los cuales son obligatorios para todos los alojamientos de corta estancia en España según la normativa vigente (RD 933/2021)."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Qué idiomas soporta el sistema?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "De momento, lo único que está en varios idiomas es el formulario que rellenan los viajeros al hacer el check-in. El resto del panel de usuario para gestionar tus habitaciones o propiedades solo está en español. Pero si lo necesitas en otro idioma, solo tendrás que escribirnos a contacto@delfincheckin.com y nos pondremos a trabajar en ello para facilitártelo todo."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Qué incluye el Plan Gratuito y qué no?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Incluye (gratis para siempre): Gestión completa de reservas, gestión de habitaciones, exportación de datos (CSV/Excel), panel de administración completo, soporte por email, app móvil (próximamente) y financiado con anuncios elegantes y discretos. No incluye: Check-in digital (8€/mes), envío automático al Ministerio del Interior y registro de viajeros (MIR) con envío oficial. El Plan Gratuito te permite gestionar tu alojamiento sin coste. Para cumplimiento legal completo, necesitas el Plan Check-in (8€/mes)."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Qué seguridad tienen los datos de mis huéspedes?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Cumplimos con el RGPD y la normativa española de protección de datos. Los datos se almacenan en servidores seguros en la UE con cifrado de extremo a extremo. Realizamos copias de seguridad diarias y tenemos protocolos de seguridad que incluyen autenticación de dos factores y monitoreo 24/7."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Puedo personalizar el formulario de check-in?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No, el formulario no es personalizable, pero está completo con todo lo que se pide. En caso de que necesitaras algo más o hubiera algo que no se entendiese, nos podrías escribir a contacto@delfincheckin.com y estaremos encantados de atender tus necesidades."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Puedo exportar mis datos?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí, puedes exportar todos tus datos en formato CSV/Excel para contabilidad, declaración de renta o cualquier otro uso. Los datos están siempre disponibles para exportación sin restricciones."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Qué pasa si no tengo internet?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "El sistema funciona offline: los huéspedes pueden completar el check-in sin conexión y los datos se sincronizan automáticamente cuando se restablece la conexión. Toda la información queda guardada localmente para garantizar que no se pierda ningún registro."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Hay límite en el número de huéspedes o reservas?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No hay límites en el número de huéspedes, reservas o consultas. Nuestros planes se basan en el número de propiedades, no en el volumen de transacciones. Puedes gestionar desde un pequeño apartamento hasta grandes complejos hoteleros con la misma funcionalidad."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Cuándo estará disponible el módulo de check-in?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "En cuanto se lance la versión gratuita del PMS se podrá contratar este módulo también. Te avisaremos por email cuando esté disponible para que puedas empezar a usarlo de inmediato."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Puedo probar el sistema?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Estamos en fase de pre-lanzamiento. Regístrate con tu email y te avisaremos cuando esté listo. Los primeros usuarios podrán probar el Plan Gratuito completo de forma gratuita para siempre. El módulo de check-in digital (envío al Ministerio del Interior) siempre tendrá un coste de 8€/mes, incluso para primeros usuarios."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Qué soporte técnico incluye?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Incluimos soporte por email. Las consultas se responden en un máximo de 24-48 horas. Por lo general, ninguna de momento ha pasado ese tiempo, pero pudiera ocurrir aunque no es lo normal. Estamos aquí para ayudarte y resolver cualquier duda o problema que puedas tener."
+            }
+          }
+        ]
       }
     ]
   }
