Agregada pregunta sobre programas de referidos y afiliados en FAQ

--- a/index.html
+++ b/index.html
@@ -350,6 +350,14 @@
               "@type": "Answer",
               "text": "Incluimos soporte por email. Las consultas se responden en un máximo de 24-48 horas. Por lo general, ninguna de momento ha pasado ese tiempo, pero pudiera ocurrir aunque no es lo normal. Estamos aquí para ayudarte y resolver cualquier duda o problema que puedas tener."
             }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Tienen programas de referidos o afiliados?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Sí, tenemos programas tanto de referidos como de afiliados para que puedas ganar dinero recomendando Delfín Check-in. Programa de Referidos: Gana dinero cada vez que alguien se registre usando tu enlace de referido. Programa de Afiliados: Ideal para blogs, influencers y empresas que quieren promocionar nuestro software. Comisiones atractivas por cada conversión. Ambos programas son completamente gratuitos de unirte y te permiten generar ingresos pasivos recomendando Delfín Check-in a otros propietarios de alojamientos."
+            }
           }
         ]
       }
@@ -2000,6 +2008,21 @@
           Incluimos soporte por email. Las consultas se responden en un máximo de 24-48 horas. 
           Por lo general, ninguna de momento ha pasado ese tiempo, pero pudiera ocurrir aunque no es lo normal. 
           Estamos aquí para ayudarte y resolver cualquier duda o problema que puedas tener.
+        </p>
+      </details>
+      <details>
+        <summary>¿Tienen programas de referidos o afiliados?</summary>
+        <p>
+          Sí, tenemos programas tanto de <strong>referidos</strong> como de <strong>afiliados</strong> para que puedas ganar dinero recomendando Delfín Check-in.
+          <br><br>
+          <strong>💰 Programa de Referidos:</strong> Gana dinero cada vez que alguien se registre usando tu enlace de referido. 
+          <a href="/referidos.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más información sobre el programa de referidos</a>
+          <br><br>
+          <strong>🤝 Programa de Afiliados:</strong> Ideal para blogs, influencers y empresas que quieren promocionar nuestro software. 
+          Comisiones atractivas por cada conversión. 
+          <a href="/afiliados.html" style="color: var(--brand); text-decoration: underline; font-weight: 600;">Más información sobre el programa de afiliados</a>
+          <br><br>
+          Ambos programas son completamente gratuitos de unirte y te permiten generar ingresos pasivos recomendando Delfín Check-in a otros propietarios de alojamientos.
         </p>
       </details>
     </section>
